--- a/docs/4.Nexus-Repository.md
+++ b/docs/4.Nexus-Repository.md
@@ -1,8 +1,32 @@
 # Nexus Repository
-- Nexus Repository 란 ? 
+- Nexus Repository 란 ? maven에서 사용할 수 있는 repository
 - 
 
 ## Vagrant + CentOS 7에서 Nexus Repository Server 설치
+
+- Windows command 창에 ``` vagrant up ``` 명령어 실행 후 ```vagrant ssh``` 명령어로 shell 실행
+- 설치는 ``` https://help.sonatype.com/repomanager3/download/download-archives---repository-manager-3 ``` 를 참고
+- 설치 및 디렉토리 변경
+```
+$ wget yarn install -y	https://download.sonatype.com/nexus/3/latest-unix.tar.gz   --no-check-certificate
+$ tar -xvfz latest-unix.tar.gz -C /opt/nexus
+$ mv ? ?
+```
+- port 변경
+$ cd /opt/nexus/?/conf
+$ vi nexus.properties
+
+```
+캡처
+```
+
+- 외부에서 사용해야 할 경우
+  - 방화벽 오픈
+```
+firewall-cmd --permanent --zone=public --add-port=8082/tcp
+firewall-cmd --reload
+firewall-cmd --permanent --list-all
+```
 
 ## Spring 등의 외부 Repository를 Nexus에 등록
 
