--- a/docs/4.Nexus-Repository.md
+++ b/docs/4.Nexus-Repository.md
@@ -4,6 +4,7 @@
 
 ## Vagrant + CentOS 7에서 Nexus Repository Server 설치
 
+### 패키지 다운로드
 - Windows command 창에 ``` vagrant up ``` 명령어 실행 후 ```vagrant ssh``` 명령어로 shell 실행
 - 설치는 ``` https://help.sonatype.com/repomanager3/download/download-archives---repository-manager-3 ``` 를 참고
 - 설치 및 디렉토리 변경
@@ -27,6 +28,45 @@ firewall-cmd --permanent --zone=public --add-port=8082/tcp
 firewall-cmd --reload
 firewall-cmd --permanent --list-all
 ```
+
+### nexus 계정정보 등록 및 nexus 계정 생성
+```
+addgroup -S nexus && adduser -S nexus -G nexus
+```
+- ```vi /opt/nexus/bin/nexus``` 실행
+``` RUN_AS_USER ``` 항목에 nexus 계정 등록
+
+
+### 서비스 등록해서 자동 실행 시키기
+- 다음의 명령어를 입력하여 리눅스 서비스에 등록
+```
+$ cp nexus /etc/init.d/nexus
+$ vi /etc/init.d/nexus
+
+```
+-  home 디렉토리 설정
+```
+$ NEXUS_HOME=/opt/[nexus 폴더명]
+$ PIDDIR="/opt"
+```
+- java 경로를 nexus 설정에 등록
+```
+$ vi /opt/nexus-2.14.8-01/bin/jsw/conf/wrapper.conf
+```
+```
+$ wrapper.java.command=/usr/local/java/bin/java [자바경로]
+```
+- 서비스 실행
+``` 
+# 서비스 실행
+$ service nexus start 
+# 서비스 조회
+$ ps -ef | grep nexus | grep -v grep
+```
+
+- 접속
+http://도메인:포트번호/nexus 를 브라우저에서 
+
 
 ## Spring 등의 외부 Repository를 Nexus에 등록
 
