--- a/docs/4.Nexus-Repository.md
+++ b/docs/4.Nexus-Repository.md
@@ -9,7 +9,7 @@
 - 설치는 ``` https://help.sonatype.com/repomanager3/download/download-archives---repository-manager-3 ``` 를 참고
 - 설치 및 디렉토리 변경
 ```
-$ wget yarn install -y	https://download.sonatype.com/nexus/3/latest-unix.tar.gz   --no-check-certificate
+$ wget install -y	https://download.sonatype.com/nexus/3/latest-unix.tar.gz   --no-check-certificate
 $ tar -xvfz latest-unix.tar.gz -C /opt/nexus
 $ mv ? ?
 ```
