--- a/docs/4.Nexus-Repository.md
+++ b/docs/4.Nexus-Repository.md
@@ -10,12 +10,12 @@
 - 설치 및 디렉토리 변경
 ```
 $ wget install https://download.sonatype.com/nexus/3/latest-unix.tar.gz   --no-check-certificate
-$ tar -xvfz latest-unix.tar.gz -C /opt/nexus
-$ mv ? ?
+$ tar -xvf latest-unix.tar.gz
+$ sudo mv nexus-3.29.2-02 /opt/
 ```
 - port 변경
-$ cd /opt/nexus/?/conf
-$ vi nexus.properties
+$ cd /opt/nexus-3.29.2-02/etc
+$ vi nexus-default.properties
 
 ```
 캡처
