--- a/docs/4.Nexus-Repository.md
+++ b/docs/4.Nexus-Repository.md
@@ -17,9 +17,7 @@ $ sudo mv nexus-3.29.2-02 /opt/
 $ cd /opt/nexus-3.29.2-02/etc
 $ vi nexus-default.properties
 
-```
-캡처
-```
+![image](https://user-images.githubusercontent.com/57924258/105713708-c9139380-5f5e-11eb-8856-0153864721d5.png)
 
 - 외부에서 사용해야 할 경우
   - 방화벽 오픈
