--- a/docs/4.Nexus-Repository.md
+++ b/docs/4.Nexus-Repository.md
@@ -29,9 +29,9 @@ firewall-cmd --permanent --list-all
 
 ### nexus 계정정보 등록 및 nexus 계정 생성
 ```
-addgroup -S nexus && adduser -S nexus -G nexus
+sudo groupadd nexus && adduser nexus -g nexus
 ```
-- ```vi /opt/nexus/bin/nexus``` 실행
+- ```vi /opt/nexus-3.29.2-02/bin/nexus``` 실행  
 ``` RUN_AS_USER ``` 항목에 nexus 계정 등록
 
 
