--- a/docs/4.Nexus-Repository.md
+++ b/docs/4.Nexus-Repository.md
@@ -1,5 +1,5 @@
 # Nexus Repository
-- Nexus Repository 란 ? maven에서 사용할 수 있는 repository
+- Nexus Repository 란 ? maven에서 사용할 수 있는 오픈소스 repository
 - 
 
 ## Vagrant + CentOS 7에서 Nexus Repository Server 설치
@@ -9,8 +9,11 @@
 - 설치는 ``` https://help.sonatype.com/repomanager3/download/download-archives---repository-manager-3 ``` 를 참고
 - 설치 및 디렉토리 변경
 ```
+# nexus repository 패키지 설치
 $ wget install https://download.sonatype.com/nexus/3/latest-unix.tar.gz   --no-check-certificate
+# 설치 후 압축 해제
 $ tar -xvf latest-unix.tar.gz
+# 압축 해제한 파일을 /opt 디렉토리 밑에 옮김
 $ sudo mv nexus-3.29.2-02 /opt/
 ```
 - port 변경
