--- a/docs/4.Nexus-Repository.md
+++ b/docs/4.Nexus-Repository.md
@@ -30,9 +30,12 @@ firewall-cmd --reload
 firewall-cmd --permanent --list-all
 ```
 
+- 설치 과정은 https://help.sonatype.com/repomanager3/installation 를 참고
+
 ### nexus 계정정보 등록 및 nexus 계정 생성
 ```
 sudo groupadd nexus && adduser nexus -g nexus
+패스워드 정보도
 ```
 - ```vi /opt/nexus-3.29.2-02/bin/nexus``` 실행  
 ``` RUN_AS_USER ``` 항목에 nexus 계정 등록
@@ -41,21 +44,14 @@ sudo groupadd nexus && adduser nexus -g nexus
 ### 서비스 등록해서 자동 실행 시키기
 - 다음의 명령어를 입력하여 리눅스 서비스에 등록
 ```
-$ cp nexus /etc/init.d/nexus
-$ vi /etc/init.d/nexus
+$ sudo mv /opt/nexus-3.29.2-02 /opt/nexus
+$ ln -s /opt/nexus/bin/nexus /etc/init.d/nexus
+```
 
-```
--  home 디렉토리 설정
-```
-$ NEXUS_HOME=/opt/[nexus 폴더명]
-$ PIDDIR="/opt"
-```
 - java 경로를 nexus 설정에 등록
 ```
-$ vi /opt/nexus-2.14.8-01/bin/jsw/conf/wrapper.conf
-```
-```
-$ wrapper.java.command=/usr/local/java/bin/java [자바경로]
+vi /opt/nexus/bin/nexus
+INSTALL4J_JAVA_HOME_OVERRIDE=/usr/lib/jvm/java-1.8.0-openjdk
 ```
 - 서비스 실행
 ``` 
