--- a/docs/4.Nexus-Repository.md
+++ b/docs/4.Nexus-Repository.md
@@ -62,8 +62,9 @@ $ ps -ef | grep nexus | grep -v grep
 ```
 
 - 접속
-http://도메인:포트번호/nexus 를 브라우저에서 
+http://도메인:포트번호/ 화면을 통해 접속 
 
+![image](https://user-images.githubusercontent.com/57924258/105860784-4dcee200-6031-11eb-9edc-1ab01176bc8b.png)
 
 ## Spring 등의 외부 Repository를 Nexus에 등록
 
