--- a/docs/4.Nexus-Repository.md
+++ b/docs/4.Nexus-Repository.md
@@ -1,12 +1,14 @@
 # Nexus Repository
-- Nexus Repository 란 ? maven에서 사용할 수 있는 오픈소스 repository
-- 
+- Nexus Repository 란 ? maven에서 사용할 수 있는 오픈소스 repository 
 
 ## Vagrant + CentOS 7에서 Nexus Repository Server 설치
 
 ### 패키지 다운로드
 - Windows command 창에 ``` vagrant up ``` 명령어 실행 후 ```vagrant ssh``` 명령어로 shell 실행
-- 설치는 ``` https://help.sonatype.com/repomanager3/download/download-archives---repository-manager-3 ``` 를 참고
+- 설치할 목록은 https://help.sonatype.com/repomanager3/download/download-archives---repository-manager-3 를 참고
+- 설치 과정은 https://help.sonatype.com/repomanager3/installation 를 참고
+- 설치 이전에 jdk 1.8 버전이 설치되어 있어야 합니다.
+
 - 설치 및 디렉토리 변경
 ```
 # nexus repository 패키지 설치
@@ -17,9 +19,10 @@ $ tar -xvf latest-unix.tar.gz
 $ sudo mv nexus-3.29.2-02 /opt/
 ```
 - port 변경
-$ cd /opt/nexus-3.29.2-02/etc
+```
+$ cd /opt/nexus-3.29.2-02/etc  
 $ vi nexus-default.properties
-
+```
 ![image](https://user-images.githubusercontent.com/57924258/105713708-c9139380-5f5e-11eb-8856-0153864721d5.png)
 
 - 외부에서 사용해야 할 경우
@@ -29,8 +32,6 @@ firewall-cmd --permanent --zone=public --add-port=8082/tcp
 firewall-cmd --reload
 firewall-cmd --permanent --list-all
 ```
-
-- 설치 과정은 https://help.sonatype.com/repomanager3/installation 를 참고
 
 ### nexus 계정정보 등록 및 nexus 계정 생성
 ```
@@ -51,6 +52,7 @@ $ ln -s /opt/nexus/bin/nexus /etc/init.d/nexus
 - java 경로를 nexus 설정에 등록
 ```
 vi /opt/nexus/bin/nexus
+# jdk가 설치되어 있는 경로를 입력합니다
 INSTALL4J_JAVA_HOME_OVERRIDE=/usr/lib/jvm/java-1.8.0-openjdk
 ```
 - 서비스 실행
@@ -67,6 +69,8 @@ http://도메인:포트번호/ 화면을 통해 접속
 ![image](https://user-images.githubusercontent.com/57924258/105860784-4dcee200-6031-11eb-9edc-1ab01176bc8b.png)
 
 ## Spring 등의 외부 Repository를 Nexus에 등록
+
+
 
 ## Maven의 settings.xml 파일 추가하여 설치한 Nexus 서버로 미러링
 참고 
