--- a/docs/4.Nexus-Repository.md
+++ b/docs/4.Nexus-Repository.md
@@ -58,9 +58,18 @@ INSTALL4J_JAVA_HOME_OVERRIDE=/usr/lib/jvm/java-1.8.0-openjdk
 - 서비스 실행
 ``` 
 # 서비스 실행
-$ service nexus start 
+$ sudo ./nexus
 # 서비스 조회
 $ ps -ef | grep nexus | grep -v grep
+```
+
+- 서비스 실행 후 커맨드 창
+```
+-------------------------------------------------
+
+Started Sonatype Nexus OSS 3.29.2-02
+
+-------------------------------------------------
 ```
 
 - 접속
