--- a/docs/4.Nexus-Repository.md
+++ b/docs/4.Nexus-Repository.md
@@ -45,10 +45,10 @@ sudo groupadd nexus && adduser nexus -g nexus
 ### 서비스 등록해서 자동 실행 시키기
 - 다음의 명령어를 입력하여 리눅스 서비스에 등록
 ```
-$ sudo mv /opt/nexus-3.29.2-02 /opt/nexus
-$ ln -s /opt/nexus/bin/nexus /etc/init.d/nexus
+$ vi /opt/nexus/bin/nexus.rc
+-> run_as_user="nexus" 로 수정
+sudo ln -s /opt/nexus/bin/nexus /etc/init.d/nexus
 ```
-
 - java 경로를 nexus 설정에 등록
 ```
 vi /opt/nexus/bin/nexus
