--- a/docs/4.Nexus-Repository.md
+++ b/docs/4.Nexus-Repository.md
@@ -44,25 +44,33 @@ sudo groupadd nexus && adduser nexus -g nexus
 
 ### 서비스 등록해서 자동 실행 시키기
 - 다음의 명령어를 입력하여 리눅스 서비스에 등록
-```
-$ vi /opt/nexus/bin/nexus.rc
--> run_as_user="nexus" 로 수정
-sudo ln -s /opt/nexus/bin/nexus /etc/init.d/nexus
-```
-- java 경로를 nexus 설정에 등록
-```
-vi /opt/nexus/bin/nexus
-# jdk가 설치되어 있는 경로를 입력합니다
-INSTALL4J_JAVA_HOME_OVERRIDE=/usr/lib/jvm/java-1.8.0-openjdk
-```
-- 서비스 실행
-``` 
-# 서비스 실행
-$ sudo ./nexus
-# 서비스 조회
-$ ps -ef | grep nexus | grep -v grep
-```
 
+```
+sudo vi /etc/systemd/system/nexus.service
+```
+```
+[Unit]
+Description=nexus service
+After=network.target
+  
+[Service]
+Type=forking
+LimitNOFILE=65536
+ExecStart=/opt/nexus-3.15.2-01/bin/nexus start
+ExecStop=/opt/nexus-3.15.2-01/bin/nexus stop
+User=nexus
+Restart=on-abort
+TimeoutSec=600
+  
+[Install]
+WantedBy=multi-user.target
+```
+```
+sudo systemctl daemon-reload
+sudo systemctl enable nexus.service
+sudo systemctl start nexus.service
+```
+log는 ```tail -f /opt/sonatype-work/nexus3/log/nexus.log```를 참고하면 됨  
 - 서비스 실행 후 커맨드 창
 ```
 -------------------------------------------------
