--- a/docs/4.Nexus-Repository.md
+++ b/docs/4.Nexus-Repository.md
@@ -87,17 +87,55 @@ http://도메인:포트번호/ 화면을 통해 접속
 
 ## Spring 등의 외부 Repository를 Nexus에 등록
 
+1. 먼저 UI에서 Blob Stores에 저장 될 저장소를 만든다. (test로 만듦)
+2. 만든 후 설정-Repository 메뉴로 들어가 새로운 Repository를 생성한다.
+
+![nexus-repositories-1](https://user-images.githubusercontent.com/57924258/106151653-eabf8580-61bf-11eb-8f16-192f08aa3a80.JPG)
+![nexus-repositories-3](https://user-images.githubusercontent.com/57924258/106151658-ebf0b280-61bf-11eb-9fc3-dcb77ae14e56.JPG)
 
 
 ## Maven의 settings.xml 파일 추가하여 설치한 Nexus 서버로 미러링
-참고 
-``` 
-https://m.blog.naver.com/PostView.nhn?blogId=nsh83&logNo=220875182779&proxyReferer=https:%2F%2Fwww.google.com%2F
+
+- C:/user/.m2 폴더에 settings.xml 파일을 추가하여 다음과 같이 내용을 작성한다.
+```
+<?xml version="1.0" encoding="UTF-8"?>
+<settings   xmlns="http://maven.apache.org/SETTINGS/1.0.0"
+            xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+            xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 http://maven.apache.org/xsd/settings-1.0.0.xsd">
+  <mirrors>
+    <mirror>
+      <id>Maven Repo</id>
+      <name>Maven Repo</name>
+      <url>http://[url]/repository/maven-public/</url>
+      <mirrorOf>central</mirrorOf>
+    </mirror>
+  </mirrors>
+</settings>
 ```
 
 ## Spring Boot Web 프로젝트 구성
+![intelli_1](https://user-images.githubusercontent.com/57924258/106151593-db403c80-61bf-11eb-8760-a5e344092659.JPG)
+![intelli_2](https://user-images.githubusercontent.com/57924258/106151608-dda29680-61bf-11eb-8177-bd44abee0fed.JPG)
+![intelli_3](https://user-images.githubusercontent.com/57924258/106151613-ded3c380-61bf-11eb-94c2-c5b3d8233e54.JPG)
+![intelli_4](https://user-images.githubusercontent.com/57924258/106151616-e004f080-61bf-11eb-8a71-e18e1d66b32b.JPG)
+![intelli_5](https://user-images.githubusercontent.com/57924258/106151620-e1ceb400-61bf-11eb-8a5f-e32c523287b8.JPG)
+![intelli_6](https://user-images.githubusercontent.com/57924258/106151625-e3987780-61bf-11eb-9470-353b75ad491b.JPG)
 
 ## Spring Boot를 빌드하여 Nexus에서 dependency 다운로드하는지 확인
+- Maven clean을 돌리면 log 파일을 다음과 같다.
+```
+"...
+[INFO] Scanning for projects...
+Downloading from Maven Repo: http://192.168.33.10:8089/repository/maven-public/org/springframework/boot/spring-boot-starter-parent/2.4.2/spring-boot-starter-parent-2.4.2.pom
+Downloaded from Maven Repo: http://192.168.33.10:8089/repository/maven-public/org/springframework/boot/spring-boot-starter-parent/2.4.2/spring-boot-starter-parent-2.4.2.pom (0 B at 0 B/s)
+Downloading from Maven Repo: http://192.168.33.10:8089/repository/maven-public/org/springframework/boot/spring-boot-dependencies/2.4.2/spring-boot-dependencies-2.4.2.pom
+Downloaded from Maven Repo: http://192.168.33.10:8089/repository/maven-public/org/springframework/boot/spring-boot-dependencies/2.4.2/spring-boot-dependencies-2.4.2.pom (0 B at 0 B/s)
+Downloading from Maven Repo: http://192.168.33.10:8089/repository/maven-public/com/datastax/oss/java-driver-bom/4.9.0/java-driver-bom-4.9.0.pom
+Downloaded from Maven Repo: http://192.168.33.10:8089/repository/maven-public/com/datastax/oss/java-driver-bom/4.9.0/java-driver-bom-4.9.0.pom (0 B at 0 B/s)
+Downloading from Maven Repo: http://192.168.33.10:8089/repository/maven-public/io/dropwizard/metrics/metrics-bom/4.1.17/metrics-bom-4.1.17.pom
+Downloaded from Maven Repo: http://192.168.33.10:8089/repository/maven-public/io/dropwizard/metrics/metrics-bom/4.1.17/metrics-bom-4.1.17.pom (0 B at 0 B/s)
+...
+```
 
 ## maven deploy 커맨드로 내가 만든 Spring Boot의 빌드한 JAR 파일을 Nexus에 배포하기 (현아님 Space에 사용 가이드 작성하기 → 추후 Maven쪽으로 옮길 예정)
 
