--- a/docs/4.Nexus-Repository.md
+++ b/docs/4.Nexus-Repository.md
@@ -92,6 +92,8 @@ http://도메인:포트번호/ 화면을 통해 접속
 
 ![nexus-repositories-1](https://user-images.githubusercontent.com/57924258/106151653-eabf8580-61bf-11eb-8f16-192f08aa3a80.JPG)
 ![nexus-repositories-3](https://user-images.githubusercontent.com/57924258/106151658-ebf0b280-61bf-11eb-9fc3-dcb77ae14e56.JPG)
+![repo-1](https://user-images.githubusercontent.com/57924258/106152823-36266380-61c1-11eb-8d0c-bf4f415e434e.JPG)
+![repo-2](https://user-images.githubusercontent.com/57924258/106152826-37f02700-61c1-11eb-8b94-5849e9bc6bd5.JPG)
 
 
 ## Maven의 settings.xml 파일 추가하여 설치한 Nexus 서버로 미러링
