--- a/docs/4.Nexus-Repository.md
+++ b/docs/4.Nexus-Repository.md
@@ -307,6 +307,6 @@ Uploaded to nexus-snapshots: http://192.168.33.10:8089/repository/maven-snapshot
 
 ## release / snapshot
 
-- JAR 파일에 TIMESTAMP와 SEQUENCE가 붙으면 pom.xml 파일에 version이 SNAPSHOT 인 경우 -> 항상 최신 버전을 가지고 옴
-- version을 1.0 1.0.1 이런식으로 fix 시키면 버전 업로드가 중지되는데, 이런 버전을 릴리즈 버전이라 함. 
+- SNAPSHOT : JAR 파일에 TIMESTAMP와 SEQUENCE가 붙으면 pom.xml 파일에 version이 SNAPSHOT 인 경우 -> 항상 최신 버전을 가지고 옴
+- RELEASE : version을 1.0 1.0.1 이런식으로 fix 시키면 버전 업로드가 중지되는데, 이런 버전을 릴리즈 버전이라 함. 
 - Spring은 4.3.1.RELEASE 이렇게 쓰다가 최근에 5.2.0 이런식으로 바꾸었음
