--- a/docs/4.Nexus-Repository.md
+++ b/docs/4.Nexus-Repository.md
@@ -124,7 +124,10 @@ http://도메인:포트번호/ 화면을 통해 접속
 ![intelli_6](https://user-images.githubusercontent.com/57924258/106151625-e3987780-61bf-11eb-9470-353b75ad491b.JPG)
 
 ## Spring Boot를 빌드하여 Nexus에서 dependency 다운로드하는지 확인
-- Maven clean을 돌리면 log 파일을 다음과 같다.
+
+- 이 때 저는 spring repository 만 추가되어 있기 때문에 다른 패키지들을 다운로드 할 때 에러가 발생합니다.
+- 그래서 실제로 maven install을 할 때는 이미 존재하는 maven-public repository를 이용했습니다.
+- Maven clean install을 돌리면 log 파일을 다음과 같다.
 ```
 "...
 [INFO] Scanning for projects...
