--- a/docs/4.Nexus-Repository.md
+++ b/docs/4.Nexus-Repository.md
@@ -307,6 +307,58 @@ Uploaded to nexus-snapshots: http://192.168.33.10:8089/repository/maven-snapshot
 
 ## Nexus Repository에 소스까지 배포하기
 
+pom.xml에 maven-source-plugin을 추가
+```
+<build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>${maven-deploy-plugin.version}</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.5.1</version>
+                <executions>
+                    <execution>
+                        <id>default-deploy</id>
+                        <phase>deploy</phase>
+                        <goals>
+                            <goal>deploy</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <serverId>nexus</serverId>
+                    <nexusUrl>http://192.168.33.10:8089/repository/maven-snapshots/</nexusUrl>
+                    <skipStaging>true</skipStaging>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+```
+- 다음 화면은 source jar파일 추가된 걸 확인할 수 있음
+![image](https://user-images.githubusercontent.com/57924258/106358310-de1d6780-634e-11eb-9a29-aeb3269f4a5f.png)
 
 ## release / snapshot
 
