--- a/docs/4.Nexus-Repository.md
+++ b/docs/4.Nexus-Repository.md
@@ -142,7 +142,7 @@ Downloaded from Maven Repo: http://192.168.33.10:8089/repository/maven-public/io
 ...
 ```
 
-## maven deploy 커맨드로 내가 만든 Spring Boot의 빌드한 JAR 파일을 Nexus에 배포하기 (현아님 Space에 사용 가이드 작성하기 → 추후 Maven쪽으로 옮길 예정)
+## maven deploy 커맨드로 내가 만든 Spring Boot의 빌드한 JAR 파일을 Nexus에 배포하기 
 - Repositories에 등록되어 있는 maven-snapshots repository를 이용하여 배포할 계획입니다.
 - 정리하자면, maven-public repository에서 pom.xml에 있는 파일들을 미러링→ 해당 jar 파일들을 다운로드 → maven-snapshots repository에 배포한다는 계획입니다.
 - 다음은 settings.xml에 deploy 설정을 추가한 내용입니다.
@@ -309,7 +309,39 @@ Uploaded to nexus-snapshots: http://192.168.33.10:8089/repository/maven-snapshot
 
 pom.xml에 maven-source-plugin을 추가
 ```
-<build>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.4.2</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+    <groupId>com.example</groupId>
+    <artifactId>demo</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>demo</name>
+    <description>Demo project for Spring Boot</description>
+    <properties>
+        <java.version>1.8</java.version>
+        <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
+    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
+    <build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -318,6 +350,7 @@ pom.xml에 maven-source-plugin을 추가
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
+                <version>3.2.1</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -356,6 +389,16 @@ pom.xml에 maven-source-plugin을 추가
             </plugin>
         </plugins>
     </build>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>nexus-snapshots</id>
+            <url>http://192.168.33.10:8089/repository/maven-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
+
+</project>
+
 ```
 - 다음 화면은 source jar파일 추가된 걸 확인할 수 있음
 ![image](https://user-images.githubusercontent.com/57924258/106358310-de1d6780-634e-11eb-9a29-aeb3269f4a5f.png)
